// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortControlPanel test renders correctly with child component 1`] = `
<div
  className="sort-control-panel-wrapper"
>
  <strong
    className="sort-control-panel__result-amount"
  >
    Films by drama genre
  </strong>
  <div
    className="sort-control-panel__filter"
  >
    <span
      className="sort-control-panel__filter-title"
    >
      SORT BY
    </span>
    <OptionChooser
      defaultValue="title"
      onChangeCallback={[MockFunction]}
      optionsConfig={
        Array [
          Object {
            "name": "searchType",
            "radioBtnName": "TITLE",
            "value": "title",
          },
          Object {
            "name": "searchType",
            "radioBtnName": "GENRE",
            "value": "genres",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`SortControlPanel test renders correctly without child component 1`] = `
<div
  className="sort-control-panel-wrapper"
>
  <strong
    className="sort-control-panel__result-amount"
  >
    Films by drama genre
  </strong>
</div>
`;
